--- a/Profiles/app/src/main/res/layout/fragment_personal_profile.xml
+++ b/Profiles/app/src/main/res/layout/fragment_personal_profile.xml
@@ -104,7 +104,7 @@
                 android:paddingLeft="20dp"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
-                android:inputType="none"/>
+                android:editable="false"/>
             <EditText
                 android:id="@+id/ageProfile"
                 android:layout_width="match_parent"
@@ -117,7 +117,7 @@
                 android:singleLine="true"
                 android:background="@drawable/shape_form"
                 android:paddingLeft="20dp"
-                android:inputType="none"/>
+                android:editable="false"/>
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
@@ -145,7 +145,8 @@
                 android:layout_height="wrap_content"
                 android:text="Soltero"
                 android:id="@+id/checkBox"
-                android:layout_weight="1" />
+                android:layout_weight="1"
+                android:checked="true"/>
             <CheckBox
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -169,7 +170,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:text="Divorciado"
-                android:id="@+id/checkBo4"
+                android:id="@+id/checkBox4"
                 android:layout_weight="1" />
         </LinearLayout>
     </LinearLayout>
