--- a/Profiles/app/src/main/res/layout/fragment_electoral_profile.xml
+++ b/Profiles/app/src/main/res/layout/fragment_electoral_profile.xml
@@ -256,7 +256,7 @@
 
             <android.support.v4.widget.Space
                 android:layout_width="match_parent"
-                android:layout_height="40dp" />
+                android:layout_height="@dimen/bottom_space" />
         </LinearLayout>
     </ScrollView>
 
