--- a/Profiles/app/src/main/res/layout/fragment_electoral_profile.xml
+++ b/Profiles/app/src/main/res/layout/fragment_electoral_profile.xml
@@ -180,22 +180,8 @@
                     android:textColorHint="@color/colorPrimaryDark"
                     android:textSize="15sp" />
 
-                <EditText
-                    android:id="@+id/sympathizer"
-                    android:layout_width="match_parent"
-                    android:layout_height="40dp"
-                    android:layout_marginTop="10dp"
-                    android:background="@drawable/shape_form"
-                    android:hint="Simpatizante"
-                    android:maxLines="1"
-                    android:paddingLeft="20dp"
-                    android:singleLine="true"
-                    android:textColor="@color/colorPrimaryDark"
-                    android:textColorHint="@color/colorPrimaryDark"
-                    android:textSize="15sp" />
-
                 <Spinner
-                    android:id="@+id/subItemPoliticalParty"
+                    android:id="@+id/electoralActor"
                     android:layout_width="match_parent"
                     android:layout_height="40dp"
                     android:layout_marginTop="10dp"
@@ -206,6 +192,20 @@
                     android:textColor="@color/colorPrimaryDark"
                     android:textColorHint="@color/colorPrimaryDark"
                     android:textSize="15sp" />
+
+                <Spinner
+                    android:id="@+id/subItemElectoralActor"
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:layout_marginTop="10dp"
+                    android:background="@drawable/shape_form"
+                    android:maxLines="1"
+                    android:paddingLeft="10dp"
+                    android:singleLine="true"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:textColorHint="@color/colorPrimaryDark"
+                    android:textSize="15sp"
+                    android:visibility="invisible"/>
 
                 <LinearLayout
                     android:layout_width="match_parent"
