--- a/Profiles/app/src/main/res/layout/fragment_address_profile.xml
+++ b/Profiles/app/src/main/res/layout/fragment_address_profile.xml
@@ -72,7 +72,8 @@
                     android:singleLine="true"
                     android:textColor="@color/colorPrimaryDark"
                     android:textColorHint="@color/colorPrimaryDark"
-                    android:textSize="15sp" />
+                    android:textSize="15sp"
+                    android:visibility="invisible" />
 
                 <Spinner
                     android:id="@+id/location"
@@ -85,7 +86,8 @@
                     android:singleLine="true"
                     android:textColor="@color/colorPrimaryDark"
                     android:textColorHint="@color/colorPrimaryDark"
-                    android:textSize="15sp" />
+                    android:textSize="15sp"
+                    android:visibility="invisible" />
 
                 <EditText
                     android:id="@+id/street"
@@ -221,7 +223,7 @@
                 android:layout_weight="1"
                 android:background="@null"
                 android:text="@string/back_profile"
-                android:textColor="@color/colorPrimaryText"/>
+                android:textColor="@color/colorPrimaryText" />
 
             <Button
                 android:layout_width="wrap_content"
