--- a/Profiles/app/src/main/res/layout/fragment_electoral_profile.xml
+++ b/Profiles/app/src/main/res/layout/fragment_electoral_profile.xml
@@ -220,7 +220,7 @@
                         android:background="@drawable/ic_menu_camera" />
 
                     <TextView
-                        android:layout_width="match_parent"
+                        android:layout_width="200dp"
                         android:layout_height="40dp"
                         android:paddingLeft="20dp"
                         android:text="Credencial INE (Reverso)"
@@ -228,6 +228,14 @@
                         android:textColorHint="@color/colorPrimaryDark"
                         android:textSize="15sp"
                         android:textStyle="bold" />
+                    <Button
+                        android:id="@+id/deleteBtnBack"
+                        android:layout_width="25dp"
+                        android:layout_height="25dp"
+                        android:layout_marginLeft="40dp"
+                        android:background="@android:drawable/ic_menu_delete"
+                        android:visibility="invisible"
+                        />
                 </LinearLayout>
 
                 <LinearLayout
@@ -243,7 +251,7 @@
                         android:background="@drawable/ic_menu_camera" />
 
                     <TextView
-                        android:layout_width="match_parent"
+                        android:layout_width="200dp"
                         android:layout_height="40dp"
                         android:paddingLeft="20dp"
                         android:text="Credencial INE (Frente)"
@@ -251,6 +259,14 @@
                         android:textColorHint="@color/colorPrimaryDark"
                         android:textSize="15sp"
                         android:textStyle="bold" />
+                    <Button
+                        android:id="@+id/deleteBtnFront"
+                        android:layout_width="25dp"
+                        android:layout_height="25dp"
+                        android:layout_marginLeft="40dp"
+                        android:background="@android:drawable/ic_menu_delete"
+                        android:visibility="invisible"
+                        />
                 </LinearLayout>
             </LinearLayout>
 
