Fragment input and ime

--- a/Profiles/app/src/main/res/layout/fragment_address_profile.xml
+++ b/Profiles/app/src/main/res/layout/fragment_address_profile.xml
@@ -96,6 +96,7 @@
                     android:layout_marginTop="10dp"
                     android:background="@drawable/shape_form"
                     android:hint="Calle"
+                    android:inputType="textVisiblePassword"
                     android:maxLines="1"
                     android:paddingLeft="20dp"
                     android:singleLine="true"
@@ -118,7 +119,8 @@
                     android:layout_weight="1"
                     android:background="@drawable/shape_form"
                     android:hint="Número Exterior"
-                    android:inputType="none"
+                    android:imeOptions="actionNext"
+                    android:inputType="textVisiblePassword"
                     android:maxLines="1"
                     android:paddingLeft="20dp"
                     android:singleLine="true"
@@ -135,7 +137,8 @@
                     android:layout_weight="1"
                     android:background="@drawable/shape_form"
                     android:hint="Número Interior"
-                    android:inputType="none"
+                    android:imeOptions="actionNext"
+                    android:inputType="textVisiblePassword"
                     android:maxLines="1"
                     android:paddingLeft="20dp"
                     android:singleLine="true"
@@ -158,6 +161,7 @@
                     android:layout_marginTop="10dp"
                     android:background="@drawable/shape_form"
                     android:hint="Poblado"
+                    android:inputType="textNoSuggestions"
                     android:maxLines="1"
                     android:paddingLeft="20dp"
                     android:singleLine="true"
@@ -172,6 +176,7 @@
                     android:layout_marginTop="10dp"
                     android:background="@drawable/shape_form"
                     android:hint="Fraccionamiento"
+                    android:inputType="textNoSuggestions"
                     android:maxLines="1"
                     android:paddingLeft="20dp"
                     android:singleLine="true"
@@ -186,7 +191,8 @@
                     android:layout_marginTop="10dp"
                     android:background="@drawable/shape_form"
                     android:hint="Código Postal"
-                    android:inputType="number"
+                    android:inputType="textPostalAddress"
+                    android:maxLength="5"
                     android:maxLines="1"
                     android:paddingLeft="20dp"
                     android:singleLine="true"
