--- a/Profiles/app/src/main/res/layout/fragment_comment_profile.xml
+++ b/Profiles/app/src/main/res/layout/fragment_comment_profile.xml
@@ -37,7 +37,8 @@
                     android:text="Observaciones"
                     android:textColor="@color/colorPrimaryDark"
                     android:textSize="25sp"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"
+                    android:inputType="textImeMultiLine"/>
             </LinearLayout>
 
             <LinearLayout
