--- a/Profiles/app/src/main/res/layout/fragment_social_network_profile.xml
+++ b/Profiles/app/src/main/res/layout/fragment_social_network_profile.xml
@@ -61,7 +61,7 @@
                     android:layout_weight="1"
                     android:background="@drawable/shape_form"
                     android:hint="Facebook"
-                    android:inputType="none"
+                    android:inputType="textUri"
                     android:maxLines="1"
                     android:paddingLeft="20dp"
                     android:singleLine="true"
@@ -91,7 +91,7 @@
                     android:layout_weight="1"
                     android:background="@drawable/shape_form"
                     android:hint="Twitter"
-                    android:inputType="none"
+                    android:inputType="textUri"
                     android:maxLines="1"
                     android:paddingLeft="20dp"
                     android:singleLine="true"
@@ -121,7 +121,7 @@
                     android:layout_weight="1"
                     android:background="@drawable/shape_form"
                     android:hint="Instagram"
-                    android:inputType="none"
+                    android:inputType="textUri"
                     android:maxLines="1"
                     android:paddingLeft="20dp"
                     android:singleLine="true"
