--- a/Profiles/app/src/main/res/layout/activity_login.xml
+++ b/Profiles/app/src/main/res/layout/activity_login.xml
@@ -3,9 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorPrimaryLight"
     android:fitsSystemWindows="true"
-    tools:context="app.texium.com.profiles.LoginActivity"
-    android:background="@color/colorPrimaryLight">
+    tools:context="app.texium.com.profiles.LoginActivity">
 
     <ProgressBar
         android:id="@+id/login_progress"
@@ -14,108 +14,110 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_centerInParent="true"
-        android:visibility="gone"
         android:scrollbarSize="100dp"
-        />
+        android:visibility="gone" />
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
         <LinearLayout
             android:id="@+id/login_form"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
             android:layout_alignParentBottom="true"
-            android:layout_alignParentTop="true">
+            android:layout_alignParentTop="true"
+            android:orientation="vertical">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
+                android:layout_marginTop="30dp"
                 android:gravity="center_vertical"
-                android:layout_marginTop="30dp">
+                android:orientation="vertical">
+
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
                     android:text="SISTEMA \nDE PERFILES"
-                    android:textSize="30sp"
-                    android:textStyle="bold"
-                    android:textColor="@color/colorPrimaryText"
-                    android:layout_gravity="center_vertical"
                     android:textAlignment="center"
-                    />
+                    android:textColor="@color/colorPrimaryText"
+                    android:textSize="30sp"
+                    android:textStyle="bold" />
+
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Version Móvil 1.0.0"
-                    android:textSize="15sp"
-                    android:textStyle="normal"
-                    android:textColor="@color/colorPrimaryText"
                     android:layout_gravity="center_vertical"
+                    android:text="Version Móvil 1.0.0"
                     android:textAlignment="center"
-                    />
+                    android:textColor="@color/colorPrimaryText"
+                    android:textSize="15sp"
+                    android:textStyle="normal" />
             </LinearLayout>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:gravity="center"
                 android:layout_marginTop="40dp"
-                >
+                android:gravity="center"
+                android:orientation="vertical">
+
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Iniciar Sesión"
-                    android:textSize="25sp"
-                    android:textStyle="bold|italic"
-                    android:textColor="@color/colorPrimaryText"
                     android:layout_gravity="center_vertical"
+                    android:text="Iniciar Sesión"
                     android:textAlignment="center"
-                    />
+                    android:textColor="@color/colorPrimaryText"
+                    android:textSize="25sp"
+                    android:textStyle="bold|italic" />
+
                 <EditText
                     android:id="@+id/username"
                     android:layout_width="350dp"
                     android:layout_height="40dp"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="30dp"
+                    android:background="@drawable/shape_login"
+                    android:gravity="center"
                     android:hint="Usuario"
-                    android:textSize="15sp"
-                    android:textColor="@color/colorPrimaryDark"
-                    android:textColorHint="@color/colorPrimaryDark"
+                    android:inputType="textVisiblePassword"
                     android:maxLines="1"
                     android:singleLine="true"
-                    android:layout_marginTop="30dp"
-                    android:gravity="center"
-                    android:layout_gravity="center"
                     android:textAlignment="center"
-                    android:background="@drawable/shape_login"
-                    />
+                    android:textColor="@color/colorPrimaryDark"
+                    android:textColorHint="@color/colorPrimaryDark"
+                    android:textSize="15sp" />
+
                 <EditText
                     android:id="@+id/password"
                     android:layout_width="350dp"
                     android:layout_height="40dp"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="30dp"
+                    android:background="@drawable/shape_login"
                     android:hint="Contraseña"
-                    android:textSize="15sp"
+                    android:inputType="textPassword"
+                    android:maxLines="1"
+                    android:singleLine="true"
+                    android:textAlignment="center"
                     android:textColor="@color/colorPrimaryDark"
                     android:textColorHint="@color/colorPrimaryDark"
-                    android:maxLines="1"
-                    android:inputType="textPassword"
-                    android:singleLine="true"
-                    android:layout_marginTop="30dp"
-                    android:layout_gravity="center"
-                    android:textAlignment="center"
-                    android:background="@drawable/shape_login"
-                    />
+                    android:textSize="15sp" />
+
                 <Button
                     android:id="@+id/login_button"
                     android:layout_width="120dp"
                     android:layout_height="wrap_content"
-                    android:text="Entrar"
                     android:layout_gravity="center"
-                    android:gravity="center"
                     android:layout_marginTop="30sp"
-                    android:textColor="@color/colorPrimaryLightText"
                     android:background="@drawable/shape_button"
-                    />
+                    android:gravity="center"
+                    android:text="Entrar"
+                    android:textColor="@color/colorPrimaryLightText" />
+
                 <android.support.v4.widget.Space
                     android:layout_width="match_parent"
                     android:layout_height="80dp" />
