--- a/Profiles/app/src/main/res/layout/fragment_contact_profile.xml
+++ b/Profiles/app/src/main/res/layout/fragment_contact_profile.xml
@@ -69,7 +69,7 @@
                     android:layout_marginTop="10dp"
                     android:background="@drawable/shape_form"
                     android:hint="Email Profesional"
-                    android:inputType="textEmailSubject"
+                    android:inputType="textEmailAddress"
                     android:maxLines="1"
                     android:paddingLeft="20dp"
                     android:singleLine="true"
@@ -92,7 +92,9 @@
                     android:layout_weight="1"
                     android:background="@drawable/shape_form"
                     android:hint="Teléfono Móvil"
-                    android:inputType="none"
+                    android:imeOptions="actionNext"
+                    android:inputType="phone"
+                    android:maxLength="10"
                     android:maxLines="1"
                     android:paddingLeft="20dp"
                     android:singleLine="true"
@@ -109,7 +111,9 @@
                     android:layout_weight="1"
                     android:background="@drawable/shape_form"
                     android:hint="Teléfono Oficina"
-                    android:inputType="none"
+                    android:imeOptions="actionNext"
+                    android:inputType="phone"
+                    android:maxLength="10"
                     android:maxLines="1"
                     android:paddingLeft="20dp"
                     android:singleLine="true"
@@ -132,7 +136,9 @@
                     android:layout_weight="1"
                     android:background="@drawable/shape_form"
                     android:hint="Teléfono Casa"
-                    android:inputType="none"
+                    android:imeOptions="actionNext"
+                    android:inputType="phone"
+                    android:maxLength="10"
                     android:maxLines="1"
                     android:paddingLeft="20dp"
                     android:singleLine="true"
@@ -149,7 +155,9 @@
                     android:layout_weight="1"
                     android:background="@drawable/shape_form"
                     android:hint="Tel. Referencia"
-                    android:inputType="none"
+                    android:imeOptions="actionNext"
+                    android:inputType="phone"
+                    android:maxLength="10"
                     android:maxLines="1"
                     android:paddingLeft="20dp"
                     android:singleLine="true"
@@ -188,6 +196,8 @@
                     android:layout_marginTop="10dp"
                     android:background="@drawable/shape_form"
                     android:hint="CURP"
+                    android:inputType="textVisiblePassword"
+                    android:maxLength="18"
                     android:maxLines="1"
                     android:paddingLeft="20dp"
                     android:singleLine="true"
@@ -202,6 +212,7 @@
                     android:layout_marginTop="10dp"
                     android:background="@drawable/shape_form"
                     android:hint="RFC"
+                    android:inputType="textNoSuggestions"
                     android:maxLines="1"
                     android:paddingLeft="20dp"
                     android:singleLine="true"
