--- a/Profiles/app/src/main/res/layout/fragment_professional_profile.xml
+++ b/Profiles/app/src/main/res/layout/fragment_professional_profile.xml
@@ -54,12 +54,14 @@
                     android:layout_height="40dp"
                     android:background="@drawable/shape_form"
                     android:hint="Número de Seguro Social"
+                    android:inputType="textNoSuggestions"
                     android:maxLines="1"
                     android:paddingLeft="20dp"
                     android:singleLine="true"
                     android:textColor="@color/colorPrimaryDark"
                     android:textColorHint="@color/colorPrimaryDark"
-                    android:textSize="15sp" />
+                    android:textSize="15sp"
+                    android:imeOptions="actionDone"/>
 
                 <Spinner
                     android:id="@+id/level"
@@ -115,6 +117,7 @@
                     android:layout_marginTop="10dp"
                     android:background="@drawable/shape_form"
                     android:hint="Empleo Actual"
+                    android:inputType="textNoSuggestions"
                     android:maxLines="1"
                     android:paddingLeft="20dp"
                     android:singleLine="true"
@@ -148,7 +151,8 @@
                     android:paddingTop="20dp"
                     android:textColor="@color/colorPrimaryDark"
                     android:textColorHint="@color/colorPrimaryDark"
-                    android:textSize="15sp" />
+                    android:textSize="15sp"
+                    android:imeOptions="actionDone"/>
             </LinearLayout>
 
             <android.support.v4.widget.Space
