--- a/Profiles/app/src/main/res/layout/fragment_structure_profile.xml
+++ b/Profiles/app/src/main/res/layout/fragment_structure_profile.xml
@@ -54,13 +54,14 @@
                     android:layout_height="40dp"
                     android:background="@drawable/shape_form"
                     android:hint="Comité"
-                    android:inputType="textEmailAddress"
+                    android:inputType="textNoSuggestions"
                     android:maxLines="1"
                     android:paddingLeft="20dp"
                     android:singleLine="true"
                     android:textColor="@color/colorPrimaryDark"
                     android:textColorHint="@color/colorPrimaryDark"
-                    android:textSize="15sp" />
+                    android:textSize="15sp"
+                    />
 
                 <EditText
                     android:id="@+id/reference"
@@ -69,7 +70,7 @@
                     android:layout_marginTop="10dp"
                     android:background="@drawable/shape_form"
                     android:hint="Referencia"
-                    android:inputType="textEmailSubject"
+                    android:inputType="textNoSuggestions"
                     android:maxLines="1"
                     android:paddingLeft="20dp"
                     android:singleLine="true"
@@ -84,7 +85,7 @@
                     android:layout_marginTop="10dp"
                     android:background="@drawable/shape_form"
                     android:hint="Enlace"
-                    android:inputType="textEmailSubject"
+                    android:inputType="textNoSuggestions"
                     android:maxLines="1"
                     android:paddingLeft="20dp"
                     android:singleLine="true"
@@ -99,7 +100,7 @@
                     android:layout_marginTop="10dp"
                     android:background="@drawable/shape_form"
                     android:hint="Coordinador"
-                    android:inputType="textEmailSubject"
+                    android:inputType="textNoSuggestions"
                     android:maxLines="1"
                     android:paddingLeft="20dp"
                     android:singleLine="true"
